# ExampleCode

./: README.md
hinowa_can/: CMakeLists.txt  package.xml  write_ids.txt
hinowa_can/include/hinowa_can/: RX_struct.h  TX_struct.h  can_bcm.h  can_raw.h  can_rx.h  terminal.h
hinowa_can/include/hinowa_can/obselete/: actuate.h  can_interface.h
hinowa_can/launch/: can_sniffer.launch  hinowa_can.launch
hinowa_can/src/: can_raw.cpp  can_rx.cpp  can_sniffer.cpp  can_tx_node.cpp  sniffer_unchanged.cpp
hinowa_can/src/not_working/: can_rx_alt.cpp  can_rx_node_alt.cpp
hinowa_can/src/obselete/: actuate.cpp  can_interface.cpp  can_sniffer.cpp  can_sniffer_commented.cpp
hinowa_can/src/previous_versions/: can_bcm.cpp  can_raw.cpp  can_rx_node.cpp  can_tx_node.cpp
hinowa_can_msgs/: CMakeLists.txt  package.xml
hinowa_can_msgs/msg/: frame.msg  frameArray.msg  valve_control.msg
hinowa_control/: CMakeLists.txt  package.xml
hinowa_control/config/: control.yaml
hinowa_control/include/hinowa_control/: control_subscriber.h  execute_result_subscriber.h  hinowa_state.h  plan_result_subscriber.h
hinowa_control/src/: control_main.cpp  control_subscriber.cpp  execute_result_subscriber.cpp  hinowa_state.cpp  plan_result_subscriber.cpp
hinowa_control/src/obsolete/: control_loop.cpp  control_loop_new.cpp  control_loop_testcode.cpp  control_main (copy).cpp  control_main_2310backup.cpp  control_main_concise(needs_fixing).cpp  old_paint_cart_path.cpp
hinowa_description/: CMakeLists.txt  package.xml
hinowa_description/meshes/: end_bottom.stl  end_middle.stl  end_top.stl  link_1.stl  link_7_cable.stl  link_9.stl
hinowa_description/meshes/meshes_pre_2606/: base_link.stl  base_link_stab.stl  cable_carrier_ext.stl  hyd_1.stl  hyd_1b.stl  hyd_1c.stl  link_1.stl  link_11.stl  link_2.stl  link_2a.stl  link_3.stl  link_4.stl  link_4a.stl  link_5.stl  link_6.stl  link_7.stl  link_7_cable.stl  link_8.stl  link_8_back.stl  link_9.stl
hinowa_description/meshes/new_meshes/: base_link.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_8.stl  link_8_collision.stl  link_9_collisionipt.stl
hinowa_description/meshes/rotated_models/: base_link.stl  control_link.stl  end_bottom.stl  end_middle.stl  end_top.stl  end_top_no_rollers.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  link_7_cable.stl  link_8.stl  link_8_collision.stl  link_9.stl  link_9_collision.stl
hinowa_description/models/: hinowa.urdf  hinowa.xml  hinowa_simple.dae  hinowa_stable.urdf
hinowa_hardware_interface/: CMakeLists.txt  package.xml
hinowa_hardware_interface/config/: VCAN_encoder_values  controllers (copy).yaml  controllers.yaml  hardware.yaml  initial_joints.yaml  record_home (copy).yaml  record_home.yaml  update_encoder_rates.py
hinowa_hardware_interface/include/hinowa_hardware_interface/: hinowa_hardware.h  hinowa_hardware_interface.h
hinowa_hardware_interface/launch/: aruco_code.launch  hinowa_position_controller.launch  usb_cam.launch
hinowa_hardware_interface/src/: hinowa_hardware_interface.cpp  hinowa_hardware_interface_node.cpp
hinowa_joint_errors/: CMakeLists.txt  package.xml
hinowa_joint_errors/include/hinowa_joint_errors/: joint_error_publisher.h  joint_error_subscriber.h  joint_struct.h
hinowa_joint_errors/msg/: PID_terms.msg
hinowa_joint_errors/src/: joint_error_publisher.cpp  joint_error_subscriber.cpp
hinowa_parameters/: CMakeLists.txt  package.xml
hinowa_parameters/include/hinowa_parameters/: ctrl_loop_publisher.h  ctrl_loop_subscriber.h  hwi_publisher.h  hwi_subscriber.h
hinowa_parameters/msg/: hinowa_hwi.msg  loop_control.msg
hinowa_parameters/src/: ctrl_loop_publisher.cpp  ctrl_loop_subscriber.cpp  hwi_publisher.cpp  hwi_subscriber.cpp
hinowa_record_home/: CMakeLists.txt  package.xml
hinowa_record_home/launch/: hinowa_record_home.launch
hinowa_record_home/src/: hinowa_record_home_node.cpp
hinowacpp/: CMakeLists.txt  EEFposition.ods  joint_4 tuning  package.xml
hinowacpp/include/hinowacpp/: RX_structs.h  TX_structs.h  can_rx_subscriber.h  can_tx_publisher.h  encoder_filter.h  hinowa.h  joint.h  level_sensor.h  remote.h  segment.h  status_subscriber.h
hinowacpp/include/hinowacpp/obsolete/: can_interface.h  joint_error_subscriber.h  joint_subscriber.h
hinowacpp/src/: can_rx_subscriber.cpp  can_tx_publisher.cpp  encoder_filter.cpp  hinowa.cpp  joint.cpp  level_sensor.cpp  remote.cpp  status_subscriber.cpp
hinowacpp/src/obsolete/: can_interface.cpp  joint _before_2106.cpp  joint_error_subscriber.cpp  joint_subscriber.cpp  main.cpp
